--- a/client/src/index.css
+++ b/client/src/index.css
@@ -40,7 +40,7 @@ body {
   text-align: center;
   margin-left: auto;
   margin-right: auto;
-  width: 75%;
+  width: 25%;
   height: 75%;
   padding-top: 20px;
   padding-bottom: 10px;
@@ -51,7 +51,7 @@ body {
   text-align: center;
   margin-left: auto;
   margin-right: auto;
-  width: 60%;
+  width: 25%;
   height: 75%;
   padding-top: 20px;
   padding-bottom: 10px;
@@ -115,4 +115,15 @@ input:focus {
   .card {
     width: calc(25% - 2rem);
   }
+}
+.login{
+
+  margin-top: 5%;
+  width: 90px;
+  height: 30px;
+  border-radius: 10px;
+}
+.login:hover{
+
+  background-color: green;
 }
